added badge to show qty of re-scraped

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -29,7 +29,7 @@
             </a>
             <a href="/api/scrape" class=" ml-auto mr-2">
                 <button type="button" class="btn btn-outline-warning"><i class="fas fa-sync"></i>
-                    Re-Scrape!</button>
+                    Re-Scrape! <span id="badgeNum" class="badge badge-light">0</span></button>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
                 aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
