--- a/views/partials/rescrape.handlebars
+++ b/views/partials/rescrape.handlebars
@@ -1,4 +1,4 @@
-<div class="card text-center ml-auto mr-auto">
+<div class="card text-center" id="rescrapeCard">
     <div class="card-header">
         <span class="text-danger">Re-Scrape!</span>
     </div>
@@ -6,7 +6,7 @@
         <h5 class="card-title">No content to show..</h5>
         <p class="card-text">But don't fret! Simply click the button below to re-scrape for news!</p>
         <i class="fas fa-arrow-right"></i> <a href="/api/scrape" class=" ml-auto mr-2">
-            <button type="button" class="btn btn-outline-danger"><i class="fas fa-dragon"></i>
+            <button type="button" class="btn btn-outline-danger rescrape"><i class="fas fa-dragon"></i>
                 Re-Scrape! <span id="badgeNum" class="badge badge-light">0</span></button>
         </a><i class="fas fa-arrow-left"></i>
     </div>
