--- a/views/partials/carousel.handlebars
+++ b/views/partials/carousel.handlebars
@@ -1,5 +1,5 @@
-<div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
+<div id="carouselIndicators" class="carousel slide " data-ride="carousel">
+    <ol class="carousel-indicators ">
         <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselIndicators" data-slide-to="1"></li>
         <li data-target="#carouselIndicators" data-slide-to="2"></li>
@@ -15,13 +15,46 @@
         <div class="carousel-item">
             <img src="/img/groundhogmeme.webp" class="d-block w-100" alt="...">
         </div>
+        <div class="carousel-item">
+            <img src="/img/groundhogmeme.webp" class="d-block w-100" alt="...">
+        </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+    <a class="carousel-control-prev " href="#carouselIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+    <a class="carousel-control-next " href="#carouselIndicators" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
 </div>
+<div id="pullForm" class="p-1 text-light bg-dark"><i class="fas fa-chevron-down"></i></div>
+<div class="card mt-5 mb-0" id="addCarouselCard">
+    <div class="card-header">
+        Contribute to the Carousel up top!
+    </div>
+    <div class="card-body">
+        <form class="form" action="/api/addCarousel/" method="post">
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="poster">Your Name:</label>
+                    <input class="form-control" autocomplete="off" id="poster" name="poster" placeholder="Ash F_">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="title">IMG title:</label>
+                    <input class="form-control" id="title" autocomplete="off" name="title" placeholder="le random meme">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="img">IMG URL:</label>
+                <input type="url" class="form-control" id="img" name="img" autocomplete="off"
+                    placeholder="https://i.imgur.com/kykLaTu.gifv">
+            </div>
+
+            <input id="submit" class="btn btn-info" type="submit" value="Submit!" />
+        </form>
+    </div>
+</div>
+
+
+<script src="/js/index.js"></script>
