--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -21,6 +21,7 @@
             </div>
         </div>
     </div>
+
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container d-flex justify-content-between">
             <a href="/" id="navBrand" class="navbar-brand">
@@ -28,7 +29,7 @@
 
             </a>
             <a href="/api/scrape" class=" ml-auto mr-2">
-                <button type="button" class="btn btn-outline-warning"><i class="fas fa-sync"></i>
+                <button type="button" class="btn btn-outline-warning rescrape"><i class="fas fa-sync"></i>
                     Re-Scrape! <span id="badgeNum" class="badge badge-light">0</span></button>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
