added option to enter without scraping

--- a/views/cover.handlebars
+++ b/views/cover.handlebars
@@ -36,6 +36,7 @@
                     <a href="/api/scrape" class="btn btn-lg btn-secondary"><i class="fas fa-screwdriver"></i>
                         Scrape!</a>
                 </p>
+                <p class="small"><a href="/app">Enter anyway</a></p>
             </div>
         </div>
     </div>
