--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,10 +33,10 @@
                                         <a href="{{this.link}}" target="_blank">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                                         </a>
-                                        <button type="button" data-toggle="tooltip" data-placement="top"
-                                            title="'Add to favorites' is not functioning yet"
-                                            class="btn btn-sm btn-outline-danger"><i class="fas fa-star">
-                                            </i></button>
+                                        <a href="/api/notes/{{this._id}}"><button type="button" data-toggle="tooltip"
+                                                data-placement="top" title="'Add to favorites' is not functioning yet"
+                                                class="btn btn-sm btn-outline-danger"><i class="fas fa-star">
+                                                </i></button></a>
                                     </div>
                                     <small class="text-muted" data-toggle="tooltip" data-placement="top"
                                         title="{{this.date}}">...</small>
