changed the tooltip

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,7 @@
                                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                                         </a>
                                         <a href="/api/notes/{{this._id}}"><button type="button" data-toggle="tooltip"
-                                                data-placement="top" title="'Add to favorites' is not functioning yet"
+                                                data-placement="top" title="Click to add a comment!"
                                                 class="btn btn-sm btn-outline-danger"><i class="fas fa-star">
                                                 </i></button></a>
                                     </div>
