--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -25,8 +25,7 @@
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container d-flex justify-content-between">
             <a href="/app" id="navBrand" class="navbar-brand">
-                <i class="far fa-newspaper"></i> GreenEnergyForTheWin
-
+                <i class="far fa-newspaper"> </i> RenewableEnergy ForTheWin
             </a>
             <div class="btn-group" role='group'>
                 <a href="/api/notes" class=" ml-auto mr-2">
