--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,56 +1,67 @@
 <main role="main">
-
-    <section class="jumbotron text-center">
-        <img class="img-fluid" src="/img/GreenEnergyFTW_Social_Github.png" alt="">
-        <div class="container" id="top">
-            {{!-- {{> carousel}} --}}
+    {{!-- <section class="jumbotron text-center">
+        {{!-- <img class="img-fluid" src="/img/GreenEnergyFTW_Social_Github.png" alt=""> --}}
+    <div class="container" id="top">
+        {{!-- {{> carousel}} 
         </div>
-    </section>
+    </section> --}}
 
-    <div class="album py-5 bg-light">
-        <div class="container">
-            <div class="card-deck">
-                <div class="row">
-                    {{#if doc}}
-                    {{#each doc}}
-                    <div class="col-lg-4">
-                        <div class="card ml-auto mr-auto mt-3 border-left shadow p-3">
-                            {{#if this.img}}
-                            <img src="{{this.img}}" class="card-img-top img-thumbnail" alt="{{this.item.title}} image">
-                            {{else}}
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/1024px-No_image_available.svg.png"
-                                class="card-img-top img-thumbnail" alt="{{this.title}}">
-                            {{/if}}
-                            <div class="card-body">
-                                <h5 class="card-title leading"><i class="fas fa-bullhorn fa-xs"></i> {{this.title}}
-                                </h5>
-                                <p class="card-text"><i class="fas fa-comment-alt"></i> {{this.text}}</p>
-                                <p class="small">Last Scraped: {{this.scrapedDate}}</p>
-                            </div>
-                            <div class="card-footer">
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <a href="{{this.link}}" target="_blank">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        </a>
-                                        <a href="/api/notes/{{this._id}}"><button type="button" data-toggle="tooltip"
-                                                data-placement="top" title="Click to add a comment!"
-                                                class="btn btn-sm btn-outline-danger"><i class="fas fa-star">
-                                                </i></button></a>
+
+        {{!-- this is the main container, all the cards are inside --}}
+        <div class="album py-5 bg-light">
+            <div class="container">
+                {{> greet}}
+                <div class="card-deck">
+                    <div class="row">
+                        {{#if doc}}
+                        {{#each doc}}
+                        <div class="col-lg-4">
+                            <div class="card ml-auto mr-auto mt-3 shadow ">
+                                {{#if this.img}}
+                                <img src="{{this.img}}" class="card-img-top img-thumbnail"
+                                    alt="{{this.item.title}} image">
+                                {{else}}
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/1024px-No_image_available.svg.png"
+                                    class="card-img-top img-thumbnail" alt="{{this.title}}">
+                                {{/if}}
+
+                                <div class="card-body text-dark">
+                                    <h5 class="card-title leading"><i class="fas fa-bullhorn fa-xs"></i> {{this.title}}
+                                    </h5>
+                                    <p class="card-text"><i class="fas fa-comment-alt"></i> {{this.text}}</p>
+                                    <p class="small">Last Scraped: {{this.scrapedDate}}</p>
+                                </div>
+
+                                <div class="card-footer">
+                                    <div class="d-flex justify-content-between align-items-center">
+
+
+                                        <div class="btn-group" role="group">
+                                            <a href="{{this.link}}" target="_blank">
+                                                <button type="button" id="viewBtn"
+                                                    class="btn btn-sm btn-outline-secondary mr-2">View</button>
+                                            </a>
+                                            <a href="/api/notes/{{this._id}}"><button type="button" id="starBtn"
+                                                    data-toggle="tooltip" data-placement="top"
+                                                    title="Click to add a comment!"
+                                                    class="btn btn-sm btn-outline-danger"><i class="fas fa-star">
+                                                    </i></button></a>
+                                        </div>
+                                        <small id="test" class="text-muted" data-toggle="tooltip" data-placement="top"
+                                            title="{{this.date}}">Scraped</small>
+
+
                                     </div>
-                                    <small class="text-muted" data-toggle="tooltip" data-placement="top"
-                                        title="{{this.date}}">...</small>
                                 </div>
                             </div>
-                        </div>
-                    </div><br />
-                    {{/each}}
-                    {{else}}
-                    {{> rescrape}}
-                    {{/if}}
+                        </div><br />
+                        {{/each}}
+                        {{else}}
+                        {{> rescrape}}
+                        {{/if}}
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 </main>
