added small greeting msg

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
         {{!-- this is the main container, all the cards are inside --}}
         <div class="album py-5 bg-light">
             <div class="container">
-                {{> greet}}
+                <div class="text-center">{{> greet}}</div>
                 <div class="card-deck">
                     <div class="row">
                         {{#if doc}}
