--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -24,7 +24,7 @@
 
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container d-flex justify-content-between">
-            <a href="/app" id="navBrand" class="navbar-brand">
+            <a href="/" id="navBrand" class="navbar-brand">
                 <i class="far fa-newspaper"> </i> RenewableEnergy ForTheWin
             </a>
             <div class="btn-group" role='group'>
