--- a/views/partials/greet.handlebars
+++ b/views/partials/greet.handlebars
@@ -1,1 +1,2 @@
-<span class="text-center">Hello, and welcome!</span>
+<span class="text-center">Hello and welcome! This site is made out of Handlebars and the articles are sourced from
+    Google by scraping with Cheerio</span>
