--- a/views/cover.handlebars
+++ b/views/cover.handlebars
@@ -12,7 +12,7 @@
     body,
     .jumbotron {
         height: 100%;
-        background: url('http://powidian.com/wp-content/uploads/2015/04/beautiful-wind-turbines-at-night-wide.jpg') no-repeat center center fixed;
+        background: url('/img/cover-background.jpg') no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
